--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=DoAnTotNghiep_LeMinhQuang
+
+# C?u hình Cloudinary
+cloudinary.cloud-name=deob7q8nl
+cloudinary.api-key=667619964383643
+cloudinary.api-secret=K1oH9YqXbw56DqpAZVBXiZ3yx9U
+
+# --- C?U HÌNH DATABASE AIVEN (M?i) ---
+# URL: Mình ?ã ghép ?úng Host + Port + DB Name + SSL t? ?nh c?a b?n
+spring.datasource.url=jdbc:mysql://mysql-21c7e445-leminhquang-bb9a.k.aivencloud.com:12255/defaultdb?ssl-mode=REQUIRED
+
+# Username (l?y t? ?nh)
+spring.datasource.username=avnadmin
+
+# PASSWORD: Quan tr?ng! B?n quay l?i web Aiven, b?m nút Copy c?nh dòng Password r?i paste vào ?ây
+spring.datasource.password=${DB_PASSWORD}
+
+# Driver MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# T? ??ng t?o b?ng t? Entity (Product, User...)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
