--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# --- VNPAY CONFIG (?ã c?p nh?t thông tin th?t) ---
+vnpay.tmn-code=2OERWG67
+vnpay.hash-secret=1VX37LU6GJXFLS94QR6ZBEQ0Y1UWVQFY
+vnpay.url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.return-url=http://localhost:5173/payment-success
