--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,8 @@ cloudinary.api-secret=K1oH9YqXbw56DqpAZVBXiZ3yx9U
 
 # --- C?U HÌNH DATABASE AIVEN (M?i) ---
 # URL: Mình ?ã ghép ?úng Host + Port + DB Name + SSL t? ?nh c?a b?n
-spring.datasource.url=jdbc:mysql://mysql-21c7e445-leminhquang-bb9a.k.aivencloud.com:12255/defaultdb?ssl-mode=REQUIRED
+#spring.datasource.url=jdbc:mysql://mysql-21c7e445-leminhquang-bb9a.k.aivencloud.com:12255/defaultdb?ssl-mode=REQUIRED
+spring.datasource.url=jdbc:mysql://mysql-1b7e2c79-leminhquang-a830.g.aivencloud.com:17538/defaultdb?ssl-mode=REQUIRED
 
 # Username (l?y t? ?nh)
 spring.datasource.username=avnadmin
