--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,3 +29,8 @@ vnpay.tmn-code=2OERWG67
 vnpay.hash-secret=1VX37LU6GJXFLS94QR6ZBEQ0Y1UWVQFY
 vnpay.url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 vnpay.return-url=http://localhost:5173/payment-success
+
+# C?u hình m?c ??nh VNPay
+vnpay.version=2.1.0
+vnpay.command=pay
+vnpay.order-type=other
