feature/AI chatbot

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,3 +34,8 @@ vnpay.return-url=http://localhost:5173/payment-success
 vnpay.version=2.1.0
 vnpay.command=pay
 vnpay.order-type=other
+
+# C?u hình AI (Thay mã c?a b?n vào ch? YOUR_API_KEY)
+gemini.api-key=${AI_KEY}
+# S? d?ng model gemini-2.5-flash (B?n ?n ??nh m?i nh?t hi?n nay)
+gemini.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
